# capture-android-layout

./: .gitignore  README.md  pyproject.toml
notebooks/: get_annotations.ipynb  parse_xml.ipynb  parse_xml.py
xml_annotations/: V_screen__1000.xml  V_screen__3000.xml  full_V_screen__2000.xml
