[tool.poetry]
authors = ["Vinoth Pandian <vinothpandian@live.com>"]
description = ""
name = "uiautomator"
version = "0.1.0"

[tool.poetry.dependencies]
androidviewclient = {version = "^20.0.0-beta.4", allow-prereleases = true}
jupyterlab = "^2.2.8"
opencv-python = "^4.4.0"
pip = "^20.2.3"
pure-python-adb = "^0.3.0-alpha.0"
python = "~3.7"
xmltodict = "^0.12.0"
aiofiles = "^0.5.0"
jupyter_nbextensions_configurator = "^0.4.1"
pandas = "^1.1.2"
seaborn = "^0.11.0"
pytesseract = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
